--- a/modules/packages/vendored/apt_get.mustache
+++ b/modules/packages/vendored/apt_get.mustache
@@ -345,7 +345,7 @@ def remove():
     return ret
 
 def file_install():
-    cmd_line = [apt_get_cmd] + apt_get_options + ["install"]
+    cmd_line = [dpkg_cmd] + dpkg_options + ["-i"]
 
     found = False
     for line in sys.stdin:
